...
            .fillMaxWidth()
            .ifThen(scrollable) { verticalScroll(rememberScrollState()) },
    )
}

object AutoMatchPageTestTags {
    const val ROOT = "auto_match_page"
    const val RESCUE_BUTTON = "auto_match_rescue_button"
}

@OptIn(TestOnly::class)
@PreviewLightDark
@Composable
private fun PreviewAutoMatchPage() {
...
